--- a/app/js/app/partials/projectDetail.html
+++ b/app/js/app/partials/projectDetail.html
@@ -160,6 +160,18 @@
     					</div>
     				</div>
     			</div> -->
+
+  
+              <h3 class="title">Addons</h3>
+              <div class="row">
+                  <div class="col-sm-3" ng-repeat="opt in config.addons">
+                      <div class="checkbox">
+                        <input ng-model="opt.value" type="checkbox" id="{{opt.id}}" />
+                        <label class="check" for="{{opt.id}}"></label>
+                        <label class="text">{{opt.name}}</label>
+                      </div>
+                  </div>
+              </div>
     		</div>
 
     	</div>
