--- a/app/js/app/partials/projectDetail.html
+++ b/app/js/app/partials/projectDetail.html
@@ -5,10 +5,10 @@
                 <span style="position: relative; top: 2px;" class="icon-list"></span></a>
             <div class="btn-group project-name">
               <a class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                {{path}} <span ng-if="changes > 0">*</span> <span class="caret"></span>
+                {{project.path}} <span ng-if="project.repo.git.changes > 0">*</span> <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
-                  <li ng-if="changes > 0"><a href="javascript:void(0);" ng-click="pull()">Pull Changes ({{changes}})</a></li>
+                  <li ng-if="project.repo.git.changes > 0"><a href="javascript:void(0);" ng-click="pull()">Pull Changes ({{project.repo.git.changes}})</a></li>
                   <li style=""><div style="margin: 5px;color: #666; font-size: 8px; padding: 0px; margin-bottom: 0px;">local</a></li>
                   <li ng-repeat="branch in localBranches"><a href="" ng-click="checkout(branch)"><span ng-if="branch.active">*</span>{{branch.name}}</a></li>
                   <li style=""><div style="margin: 5px;color: #666; font-size: 8px; padding: 0px; margin-bottom: 0px;">remote</a></li>
@@ -22,8 +22,8 @@
               <ul class="dropdown-menu">
                 <li style=""><div style="margin: 5px;color: #666; font-size: 8px; padding: 0px; margin-bottom: 0px;">open with</a></li>
                 <li><a href="" ng-if="windows" ng-click="openSLN()"><span style="font-size: 16px;line-height: 1.5;" class="icon-Visual_Studio_2012_logo_and_wordmark"></span></a></li>
-                <li><a href=""><span style="font-size: 16px;line-height: 1.5;" class="icon-sublime-text"><span class="icon-sublime-text"><span class="path1"></span><span class="path2"></span><span class="path3"></span><span class="path4"></span><span class="path5"></span></span></span> Sublime</a></li>
-                <li><a href="" ng-click="atom()"><span style="font-size: 16px;line-height: 1.5;" class="icon-atom"></span> Atom</a></li>
+                <li><a href="" ng-click="openWith('sublime')"><span style="font-size: 16px;line-height: 1.5;" class="icon-sublime-text"><span class="icon-sublime-text"><span class="path1"></span><span class="path2"></span><span class="path3"></span><span class="path4"></span><span class="path5"></span></span></span> Sublime</a></li>
+                <li><a href="" ng-click="openWith('atom')"><span style="font-size: 16px;line-height: 1.5;" class="icon-atom"></span> Atom</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="" ng-click="openFolder()"><span class="icon-folder-2"></span> Project Folder</a></li>
               </ul>
@@ -36,7 +36,7 @@
             <!-- <a href="" ng-click="toggleConsole()"><span class="icon-terminal"></a>
             <a href="#/bug"><span class="icon-bug"></a>
             <a href="#/message"><span class="icon-message-2"></a> -->
-            <a href="#/library/project/settings/{{name}}"><span class="icon-gear"></span></a>
+            <a href="#/library/project/settings/{{project.name}}"><span class="icon-gear"></span></a>
             <a href="javascript:void(0)" ng-click="toggleCode()"><span ng-class="{ 'icon-equalizer': showCode, 'icon-file-text': !showCode }"></a>
 
             <a href="" id="toggle-menu" class="navbar-toggle" onclick="$('#bs-navbar').toggle();">
@@ -53,7 +53,7 @@
 
     <div class="row extrapadding code" ng-class="{ hidden: !showCode }" style="height: 100%;padding-top: 104px;margin-top: -104px;">
 
-        <code-editor path="projectRepoPath" pinned="pinned" label="{{path}}"></code-editor>
+        <code-editor path="project.repo.relative" pinned="pinned" label="{{project.path}}"></code-editor>
 
     </div>
 
@@ -92,7 +92,7 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <div class="styled-select">
-                            <select class="form-control" ng-model="config.engine" ng-options="option.name + ' ' + option.version for option in engines track by option.id">
+                            <select class="form-control" ng-model="project.config.engine" ng-options="option.name + ' ' + option.version for option in engines track by option.id">
                             </select>
                             <span class="caret"></span>
                         </div>
@@ -100,14 +100,14 @@
                 </div>
                 <h3 class="title">Options</h3>
                 <div class="row">
-                    <div class="col-lg-3 col-md-4 col-sm-6" ng-repeat="opt in config.options">
+                    <div class="col-lg-3 col-md-4 col-sm-6" ng-repeat="opt in project.config.options">
                         <div class="checkbox">
                         	<input ng-model="opt.value" type="checkbox" id="{{opt.id}}" />
                         	<label class="check" for="{{opt.id}}"></label>
                         	<label class="text">{{opt.name}}</label>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-4 col-sm-6" ng-repeat="opt in config.optionSelectors">
+                    <div class="col-lg-3 col-md-4 col-sm-6" ng-repeat="opt in project.config.optionSelectors">
                         <div class="styled-select">
                             <select class="form-control" ng-model="opt.value" ng-options="option.name for option in opt.options track by option.id">
                             </select>
@@ -131,14 +131,14 @@
                 </div>
                 <h3 class="title">Target</h3>
     			<div class="row">
-                    <div class="col-lg-3 col-md-4 col-sm-6" ng-repeat="opt in config.targets">
+                    <div class="col-lg-3 col-md-4 col-sm-6" ng-repeat="opt in project.config.targets">
                         <div class="checkbox">
                         	<input ng-model="opt.value" type="checkbox" id="{{opt.id}}" />
                         	<label class="check" for="{{opt.id}}"></label>
                         	<label class="text">{{opt.name}}</label>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-4 col-sm-6" ng-repeat="opt in config.targetSelectors">
+                    <div class="col-lg-3 col-md-4 col-sm-6" ng-repeat="opt in project.config.targetSelectors">
                         <div class="styled-select">
                             <select class="form-control" ng-model="opt.value" ng-options="option.name for option in opt.options track by option.id">
                             </select>
@@ -161,10 +161,10 @@
     				</div>
     			</div> -->
 
-  
+
               <h3 class="title">Addons</h3>
               <div class="row">
-                  <div class="col-sm-3" ng-repeat="opt in config.addons">
+                  <div class="col-sm-3" ng-repeat="opt in project.config.addons">
                       <div class="checkbox">
                         <input ng-model="opt.value" type="checkbox" id="{{opt.id}}" />
                         <label class="check" for="{{opt.id}}"></label>
