revamp is nearly done

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -71,32 +71,54 @@ a {
 	-moz-osx-font-smoothing: grayscale;
 }
 
-.icon-sublime-text .path1:before {
-    content: "\e915";
-    color: rgb(76, 76, 76);
+
+.icon-checkbox-unchecked:before {
+    content: "\44";
 }
-.icon-sublime-text .path2:before {
-    content: "\e916";
-    margin-left: -1em;
-    color: rgb(217, 217, 217);
+.icon-checkbox-checked:before {
+    content: "\45";
 }
-.icon-sublime-text .path3:before {
-    content: "\e917";
-    margin-left: -1em;
-    color: rgb(255, 129, 0);
+.icon-github:before {
+    content: "\e600";
 }
-.icon-sublime-text .path4:before {
-    content: "\e918";
-    margin-left: -1em;
-    color: rgb(38, 38, 38);
+.icon-twitter:before {
+    content: "\e601";
 }
-.icon-sublime-text .path5:before {
-    content: "\e919";
-    margin-left: -1em;
-    color: rgb(153, 153, 153);
+.icon-youtube:before {
+    content: "\e602";
 }
-.icon-Visual_Studio_2012_logo_and_wordmark:before {
-    content: "\e800";
+.icon-bug:before {
+    content: "\e603";
+}
+.icon-message-2:before {
+    content: "\e604";
+}
+.icon-stats:before {
+    content: "\e605";
+}
+.icon-users:before {
+    content: "\e606";
+}
+.icon-gear:before {
+    content: "\e607";
+}
+.icon-left:before {
+    content: "\e608";
+}
+.icon-add:before {
+    content: "\e609";
+}
+.icon-correct:before {
+    content: "\e60a";
+}
+.icon-delete-2:before {
+    content: "\e60b";
+}
+.icon-delete:before {
+    content: "\e60c";
+}
+.icon-left-2:before {
+    content: "\e60d";
 }
 .icon-terminal:before {
     content: "\e60e";
@@ -107,14 +129,8 @@ a {
 .icon-youtube2:before {
     content: "\e610";
 }
-.icon-file-document:before {
-    content: "\e900";
-}
 .icon-folder-2:before {
     content: "\e611";
-}
-.icon-folder2:before {
-    content: "\e901";
 }
 .icon-android:before {
     content: "\e612";
@@ -128,47 +144,17 @@ a {
 .icon-facebook:before {
     content: "\e615";
 }
-.icon-github:before {
-    content: "\e600";
-}
 .icon-html:before {
     content: "\e616";
-}
-.icon-twitter:before {
-    content: "\e601";
-}
-.icon-youtube:before {
-    content: "\e602";
 }
 .icon-alert:before {
     content: "\e617";
 }
-.icon-bug:before {
-    content: "\e603";
-}
 .icon-delete-22:before {
     content: "\e618";
 }
-.icon-envelope:before {
-    content: "\e902";
-}
-.icon-menu-list:before {
-    content: "\e903";
-}
-.icon-menu:before {
-    content: "\e90d";
-}
-.icon-message-2:before {
-    content: "\e604";
-}
 .icon-notification:before {
     content: "\e619";
-}
-.icon-slide-off:before {
-    content: "\e904";
-}
-.icon-slide-on:before {
-    content: "\e905";
 }
 .icon-star-full:before {
     content: "\e61a";
@@ -176,23 +162,38 @@ a {
 .icon-star:before {
     content: "\e61b";
 }
-.icon-stats:before {
-    content: "\e605";
-}
 .icon-tags:before {
     content: "\e61c";
 }
-.icon-users:before {
-    content: "\e606";
+.icon-Visual_Studio_2012_logo_and_wordmark:before {
+    content: "\e800";
+}
+.icon-genius:before {
+    content: "\e801";
+}
+.icon-atom:before {
+    content: "\e802";
+}
+.icon-file-document:before {
+    content: "\e900";
+}
+.icon-folder2:before {
+    content: "\e901";
+}
+.icon-envelope:before {
+    content: "\e902";
+}
+.icon-menu-list:before {
+    content: "\e903";
+}
+.icon-slide-off:before {
+    content: "\e904";
+}
+.icon-slide-on:before {
+    content: "\e905";
 }
 .icon-floppy:before {
     content: "\e906";
-}
-.icon-gear:before {
-    content: "\e607";
-}
-.icon-left:before {
-    content: "\e608";
 }
 .icon-mouse:before {
     content: "\e907";
@@ -200,35 +201,8 @@ a {
 .icon-photo:before {
     content: "\e908";
 }
-.icon-add:before {
-    content: "\e609";
-}
-.icon-checklist:before {
-    content: "\e90e";
-}
-.icon-correct:before {
-    content: "\e60a";
-}
-.icon-delete-2:before {
-    content: "\e60b";
-}
-.icon-delete:before {
-    content: "\e60c";
-}
-.icon-justify-all:before {
-    content: "\e90f";
-}
-.icon-left-2:before {
-    content: "\e60d";
-}
-.icon-list:before {
-    content: "\e910";
-}
 .icon-pan:before {
     content: "\e909";
-}
-.icon-ruler:before {
-    content: "\e914";
 }
 .icon-scale-down:before {
     content: "\e90a";
@@ -239,17 +213,17 @@ a {
 .icon-scale-tool:before {
     content: "\e90c";
 }
-.icon-genius:before {
-    content: "\e801";
+.icon-menu:before {
+    content: "\e90d";
 }
-.icon-atom:before {
-    content: "\e802";
+.icon-checklist:before {
+    content: "\e90e";
 }
-.icon-checkbox-checked:before {
-    content: "\45";
+.icon-justify-all:before {
+    content: "\e90f";
 }
-.icon-checkbox-unchecked:before {
-    content: "\44";
+.icon-list:before {
+    content: "\e910";
 }
 .icon-music:before {
     content: "\e911";
@@ -259,6 +233,24 @@ a {
 }
 .icon-film:before {
     content: "\e913";
+}
+.icon-ruler:before {
+    content: "\e914";
+}
+.icon-uniE915:before {
+    content: "\e915";
+}
+.icon-uniE916:before {
+    content: "\e916";
+}
+.icon-uniE917:before {
+    content: "\e917";
+}
+.icon-uniE918:before {
+    content: "\e918";
+}
+.icon-uniE919:before {
+    content: "\e919";
 }
 .icon-file-text:before {
     content: "\e922";
@@ -479,8 +471,193 @@ a {
 .icon-IcoMoon:before {
     content: "\eaea";
 }
+.icon-gamepad2:before {
+    content: "\e91a";
+}
+.icon-forbid:before {
+    content: "\e923";
+}
+.icon-mark-github:before {
+    content: "\f00a";
+}
+.icon-megaphone:before {
+    content: "\f079";
+}
+.icon-mortar-board2:before {
+    content: "\f0db";
+}
+.icon-octoface:before {
+    content: "\f008";
+}
+.icon-tools:before {
+    content: "\f031";
+}
+.icon-book:before {
+    content: "\e91b";
+}
+.icon-books:before {
+    content: "\e91c";
+}
+.icon-ticket:before {
+    content: "\e91d";
+}
+.icon-cart:before {
+    content: "\e91e";
+}
+.icon-credit-card:before {
+    content: "\e91f";
+}
+.icon-hammer:before {
+    content: "\e920";
+}
+.icon-hammer2:before {
+    content: "\e921";
+}
+.icon-cross:before {
+    content: "\e924";
+}
+.icon-check:before {
+    content: "\f00c";
+}
+.icon-close:before {
+    content: "\f00d";
+}
+.icon-remove:before {
+    content: "\f00d";
+}
+.icon-times:before {
+    content: "\f00d";
+}
+.icon-check-square-o:before {
+    content: "\f046";
+}
+.icon-arrow-left:before {
+    content: "\f060";
+}
+.icon-arrow-right:before {
+    content: "\f061";
+}
+.icon-arrow-up:before {
+    content: "\f062";
+}
+.icon-arrow-down:before {
+    content: "\f063";
+}
+.icon-plus:before {
+    content: "\f067";
+}
+.icon-minus:before {
+    content: "\f068";
+}
+.icon-chevron-up:before {
+    content: "\f077";
+}
+.icon-chevron-down:before {
+    content: "\f078";
+}
+.icon-square-o:before {
+    content: "\f096";
+}
+.icon-bullhorn:before {
+    content: "\f0a1";
+}
+.icon-bell-o:before {
+    content: "\f0a2";
+}
+.icon-caret-down:before {
+    content: "\f0d7";
+}
+.icon-caret-up:before {
+    content: "\f0d8";
+}
+.icon-caret-left:before {
+    content: "\f0d9";
+}
+.icon-caret-right:before {
+    content: "\f0da";
+}
+.icon-sort-desc:before {
+    content: "\f0dd";
+}
+.icon-sort-down:before {
+    content: "\f0dd";
+}
+.icon-sort-asc:before {
+    content: "\f0de";
+}
+.icon-sort-up:before {
+    content: "\f0de";
+}
+.icon-angle-left:before {
+    content: "\f104";
+}
+.icon-angle-right:before {
+    content: "\f105";
+}
+.icon-angle-up:before {
+    content: "\f106";
+}
+.icon-angle-down:before {
+    content: "\f107";
+}
+.icon-circle-o:before {
+    content: "\f10c";
+}
+.icon-circle:before {
+    content: "\f111";
+}
+.icon-gamepad:before {
+    content: "\f11b";
+}
+.icon-rocket:before {
+    content: "\f135";
+}
+.icon-youtube4:before {
+    content: "\f167";
+}
+.icon-trello:before {
+    content: "\f181";
+}
+.icon-slack:before {
+    content: "\f198";
+}
+.icon-graduation-cap:before {
+    content: "\f19d";
+}
+.icon-mortar-board:before {
+    content: "\f19d";
+}
+.icon-twitch2:before {
+    content: "\f1e8";
+}
+.icon-newspaper-o:before {
+    content: "\f1ea";
+}
+.icon-cc-stripe:before {
+    content: "\f1f5";
+}
+.icon-copyright:before {
+    content: "\f1f9";
+}
+.icon-toggle-off:before {
+    content: "\f204";
 
-
+}
+.icon-toggle-on:before {
+    content: "\f205";
+}
+.icon-fort-awesome:before {
+    content: "\f286";
+}
+.icon-shopping-basket:before {
+    content: "\f291";
+}
+.icon-close2:before {
+    content: "\e5cd";
+}
+.icon-school:before {
+    content: "\e80c";
+}
 
 .file .icon {
 	font-family: 'icomoon';
@@ -512,7 +689,7 @@ html, body {
 }
 
 body {
-    display: flex;
+    display: block;
     justify-content: center;
     align-items: center;
     font-family: sans-serif;
@@ -606,6 +783,113 @@ h2 {
     height: 100%;
 }
 
+.main {
+    background-color: @primary-color;
+    height: 100%;
+}
+
+.toolbar {
+    height: 50px;
+    background-color: @secondary-color;
+    color: #000;
+    -webkit-user-select: none;
+    -webkit-app-region: drag;
+    position: relative;
+    a {
+        color: #000;
+        -webkit-app-region: no-drag;
+    }
+
+    .window {
+      position: absolute;
+      right: 0;
+      width: 50%;
+      text-align: right;
+
+      .window-close {
+        color: #fff;
+        display: inline-block;
+        width: 50px;
+        height: 25px;
+        text-align: center;
+        font-size: 20px;
+        font-weight: bold;
+      }
+      .window-close:hover {
+        background-color: @danger-color;
+      }
+
+      .window-minimize {
+        padding-top: 6px;
+        color: #fff;
+        display: inline-block;
+        width: 28px;
+        height: 25px;
+        text-align: center;
+      }
+      .window-minimize:hover {
+        background-color: @primary-color;
+      }
+
+      .window-maximize {
+        padding-top: 3px;
+        color: #fff;
+        display: inline-block;
+        width: 28px;
+        height: 25px;
+        text-align: center;
+        font-size: 18px;
+      }
+      .window-maximize:hover {
+        background-color: @primary-color;
+      }
+    }
+
+    .tabs {
+      position: absolute;
+      left: 0;
+      width: 50%;
+      text-align: left;
+      .tab {
+        height: 50px;
+        border-top: 3px solid @active-color;
+        color: #fff;
+        background-color: @primary-color;
+        display: inline-block;
+        padding: 10px 25px;
+        font-size: 20px;
+      }
+    }
+}
+
+#mainContainer {
+  width: 100%;
+  padding: 0px;
+  padding-left: 50px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  .content {
+    position: absolute;
+    top: 50px;
+    left: 50px;
+    right: 0;
+    bottom: 0;
+  }
+}
+
+.launcher-side-menu {
+  width: 50px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  background-color: @secondary-color;
+  z-index: 10000;
+}
+
 .sidebar {
     background-color: @secondary-color;
     height: 100%;
@@ -613,32 +897,13 @@ h2 {
         font-family: 'OpenSansCondBold';
         font-size: 24.0px;
     }
-}
-
-.main {
-    background-color: @primary-color;
-    height: 100%;
-}
-
-.toolbar {
-    background-color: @highlight-color;
-    color: #000;
-    -webkit-user-select: none;
-    -webkit-app-region: drag;
-    a {
-        color: #000;
-        -webkit-app-region: no-drag;
-    }
-}
-
-.sidebar {
     .favorites {
         margin-top: 10px;
     }
 }
 
 .sections {
-    margin-top: 20px;
+    margin-top: 2px;
     ul {
         padding-left: 0px;
         li {
@@ -647,27 +912,126 @@ h2 {
             color: @highlight-color;
             list-style-type: none;
             text-align: left;
-            padding: 3px;
-            padding-left: 15px;
+            padding: 10px;
+            padding-top: 4px;
+            height: 50px;
+            width: 50px;
+            overflow: hidden;
             a {
                 color: @highlight-color;
+                padding: 0px;
+                margin: 0px;
+                display: flex;
+                font-size: 26px;
+                padding-top: 7px;
+                span {
+                    padding: 0px;
+                    margin: 0px;
+                    display: inline-block;
+                }
+                span.text {
+                  color: #fff;
+                  padding-left: 15px;
+                  position: relative;
+                  top: -2px;
+                  font-size: 20px;
+                  font-family: sans-serif;
+                  white-space: nowrap;
+                }
+
+                .icon-newspaper-o {
+                  font-size: 26px;
+                }
+
+                .icon-mortar-board2 {
+                  font-size: 32px;
+                  margin-top: -2px;
+                }
+            }
+            a.news {
+              top: 5px;
+            }
+            a.learn {
+              top: 5px;
             }
             a:hover {
                 text-decoration: none;
-                color: @primary-color;
             }
 
             ul li {
                 font-size: 16px;
             }
         }
+        li {
+          background-color: @secondary-color;
+          border: 1px solid @secondary-color;
+          border-left: 0px solid @secondary-color;
+          display: inline-block;
+          margin: -2px 0px;
+        }
+        li:hover {
+          border-top-right-radius: 10px;
+          border-bottom-right-radius: 10px;
+          background-color: @secondary-color;
+          border: 1px solid @primary-color;
+          border-left: 0px solid @primary-color;
+          width: auto;
+        }
         li.active {
             background-color: @active-color;
+            border: 1px solid @active-color;
+            border-left: 0px solid @active-color;
         }
     }
 }
 
+.sections.sections-bottom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 50px;
+  ul {
+      li {
+          height: 35px;
+          font-size: 16px;
+          padding: 14px;
+          padding-left: 17px;
+          a {
+              padding-top: 0px;
+              font-size: 16px;
+              span {
+                margin-top: -6px;
+              }
+              span.text {
+                padding-left: 22px;
+                top: -2px;
+                font-size: 16px;
+              }
+              .icon-newspaper-o {
+                font-size: 26px;
+              }
+
+              .icon-mortar-board2 {
+                font-size: 32px;
+                margin-top: -2px;
+              }
+          }
+          a.news {
+            top: 5px;
+          }
+          a.learn {
+            top: 5px;
+          }
+      }
+  }
+}
+
 .main {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  overflow: auto;
+  overflow-x: hidden;
     a {
         color: @highlight-color;
     }
@@ -682,20 +1046,27 @@ h2 {
     padding-top: 10px;
     border-bottom: 1px solid @highlight-color;
     a, button {
-        margin: 5px;
-        font-size: 20px;
-        padding: 4px;
+      margin: 0px;
+      margin-left: 20px;
+      font-size: 20px;
+      padding: 0px;
+      display: inline-block;
     }
 
     a.btn, button.btn {
         margin: 1px;
+        margin-left: 10px;
         font-size: 12px;
         padding: 4px 16px;
-        border: 1px solid #7c9d6a;
+        border: 1px solid #fff;
         background-color: transparent;
-        color: #7c9d6a;
+        color: #fff;
         display: inline-block;
         margin-top: -4px;
+    }
+    a.btn:hover, button.btn:hover {
+      border: 1px solid #7c9d6a;
+      color: #7c9d6a;
     }
     a.btn.dropdown-toggle {
         height: 27px;
@@ -764,21 +1135,52 @@ h2 {
 
 .library {
     .engine-version {
-        border: 3px solid @active-color;
         width: 200px;
         height: 100px;
         float: left;
         margin: 20px;
+        margin-left: 0px;
+        margin-right: 40px;
         border-radius: 6px;
         a {
             width: 100%;
             height: 100%;
             display: inline-block;
-            background-color:@highlight-color;
             color: #000;
-            border: 3px solid @highlight-color;
             border-radius: 3px;
             padding: 5px;
+            position: relative;
+
+            .overlay-background {
+              background-image: url('../content/imgs/engine-bg.png');
+              width: 100%;
+              height: 100%;
+              position: absolute;
+              top: 0;
+              left: 0;
+              background-size: cover;
+            }
+            .overlay {
+              background-image: url('../content/imgs/Overlay.png');
+              width: 100%;
+              height: 100%;
+              position: absolute;
+              top: 0;
+              left: 0;
+            }
+            .overlay-content {
+              position: absolute;
+              top: 64px;
+              left: 9px;
+              color: #fff;
+              font-family: 'OpenSansRegular';
+              font-size: 18px;
+            }
+        }
+        a:hover {
+          .overlay {
+            background-image: url('../content/imgs/OverlayHover.png');
+          }
         }
     }
 }
@@ -984,7 +1386,25 @@ a:hover, a:focus, a:active {
     text-decoration: none;
 }
 
+::-webkit-scrollbar {
+    width: 12px;
+}
 
+::-webkit-scrollbar:horizontal {
+    height: 12px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: @primary-color;
+    -webkit-box-shadow: inset 0 0 4px rgba(0,0,0,0.5);
+    border-radius: 0px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 0px;
+    background-color: @secondary-color;
+    -webkit-box-shadow: inset 0 0 4px rgba(0,0,0,0.5);
+}
 
 @keyframes rotating {
   from {
@@ -1052,14 +1472,37 @@ a:hover, a:focus, a:active {
     }
 }
 
+.code-panel {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;;
+    padding-left: 0px;
+    position: relative;
+}
+.header {
+  position: absolute;
+  top:0;
+  left:0;
+  width :100%;
+  height: 50px;
+  background-color: @primary-color;
+  z-index: 800;
+  text-align: left;
+  padding-left: 22px;
+}
 ol.codetree {
     width: 100%;
-    background-color: #141414;
     text-align: left;
-    height: 100%;
-    padding-left: 0px;
-    overflow: auto;
+    padding-left: 5px;
+    padding-top: 10px;
     padding-bottom: 100px;
+    position: absolute;
+    margin: 0;
+    top:0;
+    bottom:0;
+    left: 0;
+    right: 0;
+    overflow: auto;
     li input {
         position: absolute;
         left: 0;
@@ -1101,7 +1544,10 @@ ol.codetree {
         margin-top: 0px;
     }
     li label {
-        color: #0ECAEB;
+        color: #c6e6f4;
+    }
+    li label:hover {
+        color: #58C554;
     }
     li.file a {
         color: #fff;
@@ -1109,6 +1555,9 @@ ol.codetree {
         text-decoration: none;
         display: block;
         white-space: nowrap;
+    }
+    li.file a:hover {
+        color: #58C554;
     }
     li {
         position: relative;
@@ -1194,6 +1643,7 @@ body.main {
         }
         .btn-primary {
             margin: 1px;
+            margin-left: 10px;
             font-size: 12px;
             padding: 4px 16px;
             border: 1px solid #7c9d6a;
