--- a/app/js/app/partials/engineDetail.html
+++ b/app/js/app/partials/engineDetail.html
@@ -1,65 +1,65 @@
 
-    <div class="header">
-        <div class="row">
-            <div class="col-xs-9 text-left">
-                <a href="javascript:void();" ng-click="toggleSideBar()">
-                    <span style="position: relative; top: 2px;" class="icon-list"></span></a>
-                <div class="btn-group project-name">
-                  <a class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    OPengine v{{version}} <span ng-if="changes > 0">*</span> <span class="caret"></span>
-                  </a>
-                  <ul class="dropdown-menu">
-                      <li ng-if="changes > 0"><a href="javascript:void(0);" ng-click="pull()">Pull Changes ({{changes}})</a></li>
-                      <li style=""><div style="margin: 5px;color: #666; font-size: 8px; padding: 0px; margin-bottom: 0px;">local</a></li>
-                      <li ng-repeat="branch in localBranches"><a href="" ng-click="checkout(branch)"><span ng-if="branch.active">*</span>{{branch.name}}</a></li>
-                      <li style=""><div style="margin: 5px;color: #666; font-size: 8px; padding: 0px; margin-bottom: 0px;">remote</a></li>
-                      <li ng-repeat="branch in remoteBranches"><a href="" ng-click="checkout(branch)"><span ng-if="branch.active">*</span>{{branch.name}}</a></li>
-                  </ul>
-                </div>
-                <div class="btn-group">
-                  <a class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Open <span class="caret"></span>
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li style=""><div style="margin: 5px;color: #666; font-size: 8px; padding: 0px; margin-bottom: 0px;">open with</a></li>
-                    <li><a href="" ng-if="windows" ng-click="openSLN()"><span style="font-size: 16px;line-height: 1.5;" class="icon-Visual_Studio_2012_logo_and_wordmark"></span></a></li>
-                    <li><a href=""><span style="font-size: 16px;line-height: 1.5;" class="icon-sublime-text"><span class="icon-sublime-text"><span class="path1"></span><span class="path2"></span><span class="path3"></span><span class="path4"></span><span class="path5"></span></span></span> Sublime</a></li>
-                    <li><a href="" ng-click="atom()"><span style="font-size: 16px;line-height: 1.5;" class="icon-atom"></span> Atom</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="" ng-click="openFolder()"><span class="icon-folder-2"></span> Project Folder</a></li>
-                  </ul>
-                </div>
-                <a ng-click="cmake()" href="javascript:void();" class="btn btn-primary">Generate</a>
-                <a ng-click="make()" href="javascript:void();" class="btn btn-primary">Build</a>
-                <a ng-click="run()" href="javascript:void();" class="btn btn-primary">Run</a>
-            </div>
-            <div class="col-xs-3 text-right">
-                <!-- <a href="" ng-click="toggleConsole()"><span class="icon-terminal"></a>
-                <a href="#/bug"><span class="icon-bug"></a>
-                <a href="#/message"><span class="icon-message-2"></a>
-                <a href="#/settings"><span class="icon-gear"></a> -->
-                <a href="javascript:void(0)" ng-click="toggleCode()"><span ng-class="{ 'icon-equalizer': showCode, 'icon-file-text': !showCode }"></a>
 
-                <a href="" id="toggle-menu" class="navbar-toggle" onclick="$('#bs-navbar').toggle();">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </a>
-            </div>
+
+
+        <div class="header">
+        			<div class="btn-group">
+        				<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        					Open <span class="caret"></span>
+        				</a>
+        				<ul class="dropdown-menu">
+        					<li style=""><div style="margin: 5px;color: #666; font-size: 8px; padding: 0px; margin-bottom: 0px;">open with</a></li>
+        					<li><a href="" ng-if="windows" ng-click="openSLN()"><span style="font-size: 16px;line-height: 1.5;" class="icon-Visual_Studio_2012_logo_and_wordmark"></span></a></li>
+        					<li><a href=""><span style="font-size: 16px;line-height: 1.5;" class="icon-sublime-text"><span class="icon-sublime-text"><span class="path1"></span><span class="path2"></span><span class="path3"></span><span class="path4"></span><span class="path5"></span></span></span> Sublime</a></li>
+        					<li><a href="" ng-click="atom()"><span style="font-size: 16px;line-height: 1.5;" class="icon-atom"></span> Atom</a></li>
+        					<li role="separator" class="divider"></li>
+        					<li><a href="" ng-click="openFolder()"><span class="icon-folder-2"></span> Project Folder</a></li>
+        				</ul>
+        			</div>
+        			<a ng-click="cmake()" href="javascript:void();" class="btn btn-primary">Generate</a>
+        			<a ng-click="make()" href="javascript:void();" class="btn btn-primary">Build</a>
+        			<a ng-click="run()" href="javascript:void();" class="btn btn-primary">Run</a>
+
+        			<a href="javascript:void(0)" ng-click="toggleCode()"><span ng-class="{ 'icon-equalizer': showCode, 'icon-file-text': !showCode }"></a>
+
+        				<!-- <div class="col-xs-9 text-left">
+        						<div class="btn-group project-name">
+        							<a class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        								OPengine v{{version}} <span ng-if="changes > 0">*</span> <span class="caret"></span>
+        							</a>
+        							<ul class="dropdown-menu">
+        									<li ng-if="changes > 0"><a href="javascript:void(0);" ng-click="pull()">Pull Changes ({{changes}})</a></li>
+        									<li style=""><div style="margin: 5px;color: #666; font-size: 8px; padding: 0px; margin-bottom: 0px;">local</a></li>
+        									<li ng-repeat="branch in localBranches"><a href="" ng-click="checkout(branch)"><span ng-if="branch.active">*</span>{{branch.name}}</a></li>
+        									<li style=""><div style="margin: 5px;color: #666; font-size: 8px; padding: 0px; margin-bottom: 0px;">remote</a></li>
+        									<li ng-repeat="branch in remoteBranches"><a href="" ng-click="checkout(branch)"><span ng-if="branch.active">*</span>{{branch.name}}</a></li>
+        							</ul>
+        						</div>
+
+        				</div>
+        				<div class="col-xs-3 text-right">
+        						<a href="" ng-click="toggleConsole()"><span class="icon-terminal"></a>
+        						<a href="#/bug"><span class="icon-bug"></a>
+        						<a href="#/message"><span class="icon-message-2"></a>
+
+        						<a href="" id="toggle-menu" class="navbar-toggle" onclick="$('#bs-navbar').toggle();">
+        								<span class="sr-only">Toggle navigation</span>
+        								<span class="icon-bar"></span>
+        								<span class="icon-bar"></span>
+        								<span class="icon-bar"></span>
+        						</a>
+        				</div>
+        		</div> -->
         </div>
-    </div>
-    <div style="height: 100%; overflow: scroll-y; display:block;">
+
+      <div class="code" ng-class="{ hidden: !showCode }" style="height: 100%;overflow: hidden;">
+
+          <code-editor path="engine.repo.absolute" pinned="pinned"></code-editor>
+
+      </div>
 
 
-    <div class="row extrapadding code" ng-class="{ hidden: !showCode }" style="height: 100%;padding-top: 104px;margin-top: -104px;">
-
-        <code-editor path="engine.repo.absolute" pinned="pinned"></code-editor>
-
-    </div>
-
-
-    <div class="row extrapadding section detail"  ng-class="{ hidden: showCode }">
+    <div class="section detail"  ng-class="{ hidden: showCode }">
         <div class="col-xs-12 text-left">
             <!-- <h2 class="title">
                 <a href="" onclick="window.history.back()"> <span class="icon-left"></span> </a>
@@ -173,7 +173,7 @@
     </div>
 
 
-    <div style="
+    <!-- <div style="
         background-color: #000;
         position: absolute;
         bottom: 20px;
@@ -204,4 +204,4 @@
     ">&gt; </span>
 
     <input style="outline:none;width: 100%; height: 32px; background-color: #000; color: #fff; padding: 5px; padding-left: 40px; margin-left: 15px;border: none;" type="text" ng-model="cmd" on-enter="runCmd()" /></div>
-</div>
+</div> -->
