--- a/app/js/app/partials/library.html
+++ b/app/js/app/partials/library.html
@@ -1,21 +1,5 @@
-<div class="header">
-    <div class="row">
-        <div class="col-xs-9 text-left">
-            <a href="" ng-click="toggleSideBar()">
-                <span style="position: relative; top: 2px;" class="icon-list"></span></a>
-            </div>
-        <div class="col-xs-3 text-right">
-            <a href="" id="toggle-menu" class="navbar-toggle" onclick="$('#bs-navbar').toggle();">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </a>
-        </div>
-    </div>
-</div>
 
-<div style="height: 100%; overflow: scroll-y; display:block;">
+<div style="height: 100%; overflow: scroll-y; display:block; padding: 10px;">
 
     <div class="section" style="height: 100%">
     <div class="row extrapadding library">
@@ -35,15 +19,13 @@
             </h2>
             <div>
             	<div class="engine-version" ng-repeat="engine in engineVersions">
-                    <a href="#/library/engine/{{engine.id}}">
-                        <div style="float:left; width: 50px;">
-                            <img src="content/imgs/OPengineLogo_black.png" width="50" />
-                        </div>
-                        <div style="float:left; width: 50px;">
-                            <span>{{engine.name}}</span> <span>{{engine.version}}</span>
-                        </div>
-                        <span ng-if="engine.cloning">Cloning...</span>
-                    </a>
+                  <a href="#/library/engine/{{engine.id}}">
+                    <div class="overlay-background"></div>
+                    <div class="overlay"></div>
+                    <div class="overlay-content">
+                        <span>{{engine.name}}</span> <span>{{engine.version}}</span>
+                    </div>
+                  </a>
             	</div>
             </div>
         </div>
@@ -73,20 +55,17 @@
             <div>
             	<div class="engine-version" ng-repeat="project in projects track by project.id">
                     <a href="#/library/project/{{project.id}}">
-                        <div style="text-align: center; padding-top: 27px;">
-                            <span>{{project.name}}</span>
-                        </div>
-                        <span ng-if="project.cloning">Cloning...</span>
+                      <div class="overlay-background" style="background-image: url('{{project.bg}}')"></div>
+                      <div class="overlay"></div>
+                      <div class="overlay-content">
+                          <span>{{project.name}}</span>
+                      </div>
                     </a>
             	</div>
             </div>
         </div>
     </div>
-    <div class="row extrapadding library">
-        <div class="col-xs-12 text-left">
-            <h2 class="title"> My Games</h2>
-        </div>
-    </div>
+
 </div>
 
     <div id="newProjectModal" class="modal fade">
