--- a/app/js/app/partials/shared/codeEditor.html
+++ b/app/js/app/partials/shared/codeEditor.html
@@ -17,9 +17,11 @@
 </script>
 
 
-<div class="row" style="height: 100%;">
 
-	<div class="col-xs-6 col-sm-3 col-lg-2" style="height: 100%;padding-right:0px;">
+	<div style="height: 100%;padding-right:0px; width: 300px;    position: absolute;top: 0; padding-top: 50px; margin:0; left: 0; z-index: 500;">
+
+		<div class="code-panel">
+			<div class="code-panel-inner">
 		<ol class="codetree">
 			<li ng-class="{ file: editor.tree[0].type == 'file', folder: editor.tree[0].type == 'folder' }" data-label="{{editor.tree[0].label}}">
 				<div>
@@ -32,8 +34,10 @@
 			</li>
 		</ol>
 	</div>
+	</div>
+	</div>
 
-	<div class="col-xs-6 col-sm-9 col-lg-10" style="height: 100%;padding-left:0px;">
+	<div style="height: 100%;padding-left:300px; position: absolute; padding-top: 50px; top: 0; left: 0; width: 100%;">
 		<!-- <div id="codeHeader">
 			<div class="file" ng-repeat="file in editor.pinned" ng-class="{ 'active': file.active }">
 				<a href="javascript:void(0);" ng-click="editor.OpenWebsite(file)">HacknPlan</a> <span class="close" ng-click="">x</span>
@@ -42,7 +46,7 @@
 				<a href="javascript:void(0);" ng-click="select(file)">{{file.label}} <span ng-class="{ hidden: !file.changes }">*</span></a> <span class="close" ng-click="closeFile(file)">x</span>
 			</div>
 		</div> -->
-		<div style="margin-bottom: -40px; padding-bottom: 40px; height: 100%;">
+		<div style="height: 100%;">
 			<div id="editor" style="height: 100%; min-height: 200px; text-align: left; ">//Welcome to the OPengine editor.</div>
 			<div id="newfile" style="position: absolute; top: 0; left: 42px; width: 300px; z-index: 10;" ng-class="{ hidden: !showNewFile }">
 				<input id="newFileText" type="text" on-escape="cancelFile();" on-enter="newFile();" placeholder="New File..." ng-model="newFileName" class="form-control" />
@@ -50,7 +54,6 @@
 		</div>
 	</div>
 
-</div>
 
 
 
